# gRPC-stream-sample

./: Dockerfile  README.md  docker-compose.yml  envoy.yaml  pyproject.toml
grpc_example/: client.py  server.py
grpc_example/grpc_src/: example_pb2.py  example_pb2_grpc.py
proto/: example.proto
