[tool.poetry]
name = "grpc-stream-sample"
version = "0.1.0"
description = "a simple gRPC demo using python"
authors = ["TATA <evadcmd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.40.0"
grpcio-tools = "^1.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
